--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,13 +1,7 @@
-.root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  /* background-color: black; */
-  border: solid white 2px;
-  font-family: rowdies;
+* {
+  margin: 0;
+  padding: 0;
 }
-
 /* fonts.module.css */
 @font-face {
   font-family: "Rowdies";
