--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,11 +1,10 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
-/* fonts.module.css */
-@font-face {
-  font-family: "Rowdies";
-  src: url("../fonts/Rowdies-Bold.ttf") format("truetype"); /* Adjust the path and file name */
-  font-weight: 700;
-  font-style: normal;
+
+a {
+  text-decoration: none;
 }
