--- a/src/Components/MainNavigation.module.css
+++ b/src/Components/MainNavigation.module.css
@@ -1,12 +1,16 @@
 .navbar {
-  height: 121px;
-  border: 2px solid white;
+  height: 110px;
+  border-bottom: 1px solid white;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-right: 65px;
   padding-left: 65px;
   font-size: 36px;
+  color: white;
+  max-width: 100%;
+}
+.navbar a {
   color: white;
 }
 .navbar ul {
@@ -18,8 +22,28 @@
   text-decoration: none;
 }
 .userPicture {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
-  background-color: aquamarine;
+  cursor: pointer;
+}
+.navLinks {
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  border-right: 1px solid white;
+  padding-right: 50px;
+}
+.navProfile {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.modalButton {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 36px;
 }
