--- a/src/Pages/Register.module.css
+++ b/src/Pages/Register.module.css
@@ -2,19 +2,17 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
 }
 
 .register {
-  width: 794px;
-  height: 722px;
-  background-color: gray;
+  width: 700px;
+  height: 720px;
+  background-color: white;
   border-radius: 25px;
   margin-top: 72px;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
   padding-top: 72px;
   font-size: 24px;
@@ -23,33 +21,28 @@ body {
 .registerAddPhoto {
   padding-top: 41px;
 }
-.pfpCircle {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin-top: 45px;
-  background-color: #e6ebff;
-  margin-bottom: 43px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .nameInput {
-  width: 502px;
-  height: 51px;
+  width: 400px;
+  height: 100px;
   background-color: #e6ebff;
   border: none;
   font-size: 24px;
   padding-left: 15px;
   padding-right: 15px;
   margin-top: 43px;
-  margin-bottom: 43px;
+  color: gray;
 }
 .signIn {
-  width: 395px;
+  width: 300px;
   height: 75px;
   background-color: #4980c0;
   color: white;
-  /* border: none; */
   border-radius: 50px;
+  border: none;
+  margin-bottom: 15px;
+  transition: 0.1s;
+}
+.signIn:hover {
+  background-color: #7da0c7;
 }
