--- a/src/Pages/Root.module.css
+++ b/src/Pages/Root.module.css
@@ -1,8 +1,8 @@
 .layout {
-  width: 100vw;
+  width: 1920px;
 }
 .mainContent {
   max-width: 1280px;
-  border: 2px solid white;
+
   margin: 0 auto;
 }
