--- a/src/Components/Pagination.module.css
+++ b/src/Components/Pagination.module.css
@@ -1,10 +1,12 @@
 .paginationContainer {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.paginationContainer > button {
+.paginationContainerButton {
   width: 30px;
   height: 30px;
-  font-size: 18px;
+  font-size: 25px;
   background: none;
   color: white;
   border-bottom: 1px solid white;
@@ -15,12 +17,15 @@
   justify-content: center;
   transition: 0.2s;
 }
-.paginationContainer > button:hover {
-  background-color: white;
-  color: black;
+.paginationContainerButton:hover {
+  text-decoration: underline;
 }
 
-.paginationContainer button.active {
-  background-color: white;
-  color: black;
+.paginationContainerButton.active {
+  font-size: 33px;
+  text-decoration: underline;
+}
+.arrowContainer {
+  display: flex;
+  align-items: center;
 }
