--- a/src/Components/ImageUploader.module.css
+++ b/src/Components/ImageUploader.module.css
@@ -23,6 +23,7 @@
   background-color: #e6ebff;
   margin-bottom: 43px;
   margin-top: 43px;
+  cursor: pointer;
 }
 .invisibleInput {
   display: none;
