--- a/src/Components/UserTableList.module.css
+++ b/src/Components/UserTableList.module.css
@@ -43,12 +43,9 @@
 .table {
   font-size: 22px;
   border-radius: 5%;
-  padding-bottom: 150px;
+  padding-bottom: 1ch;
 }
-.column {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
+
 .filterContainer {
   width: 100%;
   height: 100%;
@@ -70,14 +67,17 @@
   padding-bottom: 10px;
   padding-left: 20px;
 }
+.statusFilter label {
+  padding-top: 5px;
+}
 .statusFilterDis {
   display: none;
 }
 .clickGender {
-  font-size: 20px;
+  font-size: 16px;
 }
 .clickStatus {
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .genderFilter {
@@ -86,6 +86,9 @@
   flex-direction: column;
   padding-top: 8px;
   padding-bottom: 10px;
+}
+.genderFilter label {
+  padding-top: 3px;
 }
 .genderFilter input {
   padding-top: 25px;
@@ -97,8 +100,14 @@
   align-items: center;
   display: flex;
 }
+.filterOptions a {
+  padding-top: px;
+}
 .searchLogo {
   position: absolute;
   right: 27.4%;
   top: 17.8%;
+}
+.tablePagination {
+  padding-top: 60px;
 }
