--- a/src/Pages/Register.module.css
+++ b/src/Pages/Register.module.css
@@ -43,6 +43,8 @@ body {
   margin-bottom: 15px;
   transition: 0.1s;
 }
-.signIn:hover {
+
+.signIn.disabled {
+  cursor: default;
   background-color: #7da0c7;
 }
